# Sonnet

./: .gitignore  CMakeLists.txt  Doxyfile  nob.c
cmake/: SonnetConfig.cmake.in
examples/: json.cpp
include/sonnet/: config.hpp  convert.hpp  error.hpp  options.hpp  sonnet.hpp  value.hpp
src/: error.cpp  sonnet.cpp  value.cpp
test/: CMakeLists.txt  tests.cpp
